infra/kube/apps/tunnel/deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnel
  namespace: tunnel
  labels:
    app: tunnel-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tunnel-service
  template:
    metadata:
      labels:
        app: tunnel-service
    spec:
      containers:
        - name: tunnel
          image: linuxserver/openssh-server:latest
          command:
            - /bin/bash
            - -c
            - |
              echo "${AUTH_PUBLIC_KEY}" >> /config/.ssh/authorized_keys
              exec /init
          ports:
            - containerPort: 2222
