infra/kube/apps/tunnel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunnel-service
  namespace: tunnel
spec:
  selector:
    app: tunnel-service
  ports:
    - port: 2222
      targetPort: 2222
